--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -227,6 +227,7 @@ page{
   background-color: white;
   height: 60rpx;
   line-height: 60rpx;
+  font-family: "PingFangSC-Regular";
 }
 .hasProject .punchCard .stage{
   position: relative;
