--- a/pages/index/addProject/addProject.wxml
+++ b/pages/index/addProject/addProject.wxml
@@ -5,9 +5,9 @@
 		</view>
 		<view>
 			<text class="title">项目时间</text>
-			<picker class="picker" mode="date" value="startTime" bindchange="startTimedataChange">
+			<picker class="picker" mode="date" value="beginTime" bindchange="startTimedataChange">
 			    <view>
-			      <text class="text" wx:if="{{startTime}}">{{startTime}}</text>
+			      <text class="text" wx:if="{{beginTime}}">{{beginTime}}</text>
 			    	<text class="text" wx:else>请选择开始时间</text>
 			    	<view class="navigator">
 					    <view class="navigator-arrow"></view>
@@ -35,7 +35,7 @@
 			<text class="title">项目介绍</text>
 			<view class="discription">
 				<!--  auto-focus="true"  -->
-				<textarea/>
+				<textarea name="textarea" value="{{intro}}"/>
 			</view>
 		</view>
 		<view class="footer">
@@ -45,7 +45,7 @@
 			    <view class="navigator-arrow"></view>
 			  </view>
 			</view>
-			<button class="addNew" bindtap="addNewStage" type="primary">新增阶段</button>
+			<button formType="submit" class="addNew" bindtap="addNewStage" type="primary">新增阶段</button>
 		</view>
 	</view>
 </form>
